Modification information interface pt2 (#195)
- Updated unimod_NO_NAMESPACE.xml
- Unimod modifications that have a heavy isotope (2H, 13C, 15N, 18O) will be considered an isotopic modification
- Any isotopic modification that is also a chemical modification (i.e. it changes the elemental composition of the residue or terminus) will also be considered a structural modification
- Updated the PX validator to automatically assign Unimod Ids to hard-coded modifications in Skyline
- Updated the PX validator to automatically assign Unimod Ids to wildcard modifications based on the modified amino acids in the peptides in the Skyline documents
-- Added IsotopeUnimodInfo table to support this
-- Wildcard modification matches are recalculated for each data validation job because the modified sites may have changed due to Skyline doc addition / deletion
- For isotope labels of the form Dimethyl:, mTRAQ:, ICAT-C: etc., a diff isotope formula is calculated (diff of modification minus the parent structural modification). Example: diff isotope formula for  mTRAQ:13C(6)15N(2) is  mTRAQ:13C(6)15N(2) minus mTRAQ, which is H12CC'6N'2O - H12C7N2O = C'6N'2 - C6N2. This is how isotope formulas are setup in Skyline. For isotopic formulas a match is computed against the formula of the Unimod modification as well as the diff isotope formula.
- Keep UnimodModifications in a BlockingCache for 1 day.
- Added queries for viewing the HTML-formatted modified peptide / precursor sequence along with modification name, modified index and mass diff.
- Throw UnexpectedException if Unimod.xml could not be parsed
- Updated PXHtml and PxXml writers to write multiple modification matches for wildcard modifications and combination modifications.
- Add ExperimentModInfo to Modification of _modInfoId is not null.
- ExperimentModificationGetter.getStructuralUnimodMod() and getIsotopicUnimodMod() throw IllegalArgumentException if the formula could not be parsed or not calculated.
- Updated test an